--- a/src/page/portfolio/portfolio.module.css
+++ b/src/page/portfolio/portfolio.module.css
@@ -25,3 +25,11 @@
     align-items: center;
   }    
 }
+
+@media (max-width:600px) {
+    .photo {
+      height: 400px;
+      border-radius: 60px;
+      box-shadow: 2px 2px rgb(164, 107, 218); 
+    }
+}
