--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
 html {
 background-image: url(/src/assets/back.webp);
 background-repeat: no-repeat;
+width: 100%;
+height: 100%;
+top: 0;
+left: 0;
+position: fixed; 
+z-index: -1;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
 background-size: cover;
 }
 
