--- a/src/page/portfolio/portfolio.module.css
+++ b/src/page/portfolio/portfolio.module.css
@@ -6,16 +6,17 @@
 
 .container {
     display: flex;
-    justify-content: space-around;
-    text-align: center;
-    padding-top: 30px;
+    flex-wrap: wrap;
+
 }
 
 
 .photo {
-   height: 200px;
+   height: 150px;
    border-radius: 30px;
    box-shadow: 3px 3px rgb(164, 107, 218);
+  
+  
 }
 
 @media (max-width: 600px) {
