--- a/src/page/portfolio/portfolio.module.css
+++ b/src/page/portfolio/portfolio.module.css
@@ -1,22 +1,18 @@
 .title {
-    color: rgb(164, 107, 218);
-    text-align: center;
-
+  color: rgb(164, 107, 218);
+  text-align: center;
 }
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
-
+  display: flex;
+  flex-wrap: wrap;
 }
 
-
 .photo {
-   height: 150px;
-   border-radius: 30px;
-   box-shadow: 3px 3px rgb(164, 107, 218);
-  
-  
+  height: 150px;
+  border-radius: 30px;
+  box-shadow: 3px 3px rgb(164, 107, 218);
+  border-left: 10px;
 }
 
 @media (max-width: 600px) {
@@ -24,13 +20,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-  }    
+  }
 }
 
-@media (max-width:600px) {
-    .photo {
-      height: 120px;
-      border-radius: 10px;
-      box-shadow: 2px 2px rgb(164, 107, 218); 
-    }
+@media (max-width: 600px) {
+  .photo {
+    height: 120px;
+    border-radius: 10px;
+    box-shadow: 2px 2px rgb(164, 107, 218);
+  }
 }
