--- a/src/page/portfolio/portfolio.module.css
+++ b/src/page/portfolio/portfolio.module.css
@@ -12,7 +12,7 @@
   height: 150px;
   border-radius: 30px;
   box-shadow: 3px 3px rgb(164, 107, 218);
-  border-left: 10px;
+  margin-left: 10px;
 }
 
 @media (max-width: 600px) {
