--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -3,6 +3,6 @@
     justify-content: center;
     align-items: center;
     height: 5vh;
-    color: rgb(164, 107, 218);
-    font-family: 'Times New Roman';
+    color: #E66A72;
+    
 }
