--- a/src/page/home/home.module.css
+++ b/src/page/home/home.module.css
@@ -1,33 +1,48 @@
 .container1 {
     display: flex;
     justify-content: space-around;
+   
+}
+
+.ContainerText{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    box-shadow:  2px 2px 2px 2px #E66A72;
+    border-radius: 20px;
 }
 
 .title {
-    color: rgb(164, 107, 218);
+    
     text-align: center;
+    
+    font-weight: bolder;
+
 }
 
 
 .text {
-    color: rgb(164, 107, 218);
-    font-family: 'Times New Roman';
+  
     font-weight: bolder;
     text-align: center;
     margin: 70px;
 }
 
 .clock {
-    border-width: 5px !important;
-	border-color: #980260 !important;
-	background-color: rgb(164, 107, 218);
+    border-width: 2px !important;
+    box-shadow: 2px 2px 2px 2px #E66A72 !important;
+	background-color: #783C8E;
+   
+    
 
 }
 
 .photo {
-    border-radius: 60px;
+    border-radius: 100px;
     height: 300px;
-    box-shadow: 3px 3px rgb(206, 167, 243);
+    box-shadow:  2px 2px 2px 2px #E66A72;
 }
 
 @media (max-width:600px) {
@@ -42,6 +57,15 @@
     .photo {
         height: 200px;
         border-radius: 30px;
-        box-shadow: 2px 2px rgb(206, 167, 243);
+        box-shadow: 2px 2px 2px 2px#E66A72;
     }
+}
+
+.containerName {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    box-shadow:  2px 2px 2px 2px #E66A72;
+    border-radius: 20px;
 }
