--- a/src/components/skills/skills.module.css
+++ b/src/components/skills/skills.module.css
@@ -1,5 +1,5 @@
 .skills {
-    color: rgb(164, 107, 218);
+    color: #fac7f6;
     display: flex;
     justify-content: space-around;
     padding-top: 50px;
