--- a/src/page/home/home.module.css
+++ b/src/page/home/home.module.css
@@ -55,7 +55,7 @@
 
 @media (max-width:600px) {
     .photo {
-        margin-top:10px;
+        margin-top:20px;
         height: 200px;
         border-radius: 30px;
         box-shadow: 2px 2px 2px 2px#E66A72;
@@ -65,11 +65,13 @@
 @media (max-width:600px) {
     .ContainerText {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         margin-top: 20px;
         box-shadow:  2px 2px 2px 2px #E66A72;
         border-radius: 20px;
+        margin-left: 100px ;
+        margin-right: 100px ;
     }
 }
 
@@ -78,12 +80,17 @@
         display: flex;
         justify-content: center;
         align-items: center;
-    
         box-shadow:  2px 2px 2px 2px #E66A72;
         border-radius: 20px;
-        margin-top: 20px;
     
 }}
+
+@media (max-width:600px) {
+   .title{text-align: center;
+    font-weight: bolder;
+    margin-left: 10px;
+    margin-right: 10px;} 
+}
 
 .containerName {
     display: flex;
