--- a/src/page/home/home.module.css
+++ b/src/page/home/home.module.css
@@ -78,7 +78,7 @@
 @media (max-width:600px) {
     .containerName {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
         align-items: center;
         box-shadow:  2px 2px 2px 2px #E66A72;
         border-radius: 20px;
