--- a/src/page/home/home.module.css
+++ b/src/page/home/home.module.css
@@ -78,10 +78,9 @@
 @media (max-width:600px) {
     .containerName {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
-        box-shadow:  2px 2px 2px 2px #E66A72;
-        border-radius: 20px;
+      
     
 }}
 
