--- a/src/page/home/home.module.css
+++ b/src/page/home/home.module.css
@@ -83,9 +83,13 @@
 @media (max-width:600px) {
     .containerName {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
-      
+        margin-left: 450px;
+        margin-right: 450px;
+        box-shadow:  2px 2px 2px 2px #E66A72;
+        border-radius: 20px;
+        margin-top: 20px;
     
 }}
 
