--- a/src/page/portfolio/portfolio.module.css
+++ b/src/page/portfolio/portfolio.module.css
@@ -49,8 +49,10 @@
 @media (max-width: 600px) {
  .containerName{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center ;
+  margin: 20px;
+        padding: 100px;
  }
 }
 
