--- a/src/page/portfolio/portfolio.module.css
+++ b/src/page/portfolio/portfolio.module.css
@@ -49,7 +49,7 @@
 @media (max-width: 600px) {
  .containerName{
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center ;
   margin: 20px;
         padding: 100px;
