--- a/src/page/home/home.module.css
+++ b/src/page/home/home.module.css
@@ -46,7 +46,7 @@
 }
 
 @media (max-width:600px) {
-    .container1 {
+    .page {
         display: flex;
         flex-direction: column;
         align-items: center;
