--- a/src/components/contacts/contacts.module.css
+++ b/src/components/contacts/contacts.module.css
@@ -10,3 +10,20 @@
     color:#fac7f6;
     font-size: 50px;
 }
+
+@media screen and (max-width: 600px) {
+    .contacts {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        font-size: 50px;
+    }
+    
+    .link {
+        color:#fac7f6;
+        font-size: 50px;
+    }
+    
+}
