--- a/src/components/skills/skills.module.css
+++ b/src/components/skills/skills.module.css
@@ -7,3 +7,16 @@
     font-size: 50px;
     
 }
+
+@media screen and (max-width: 600px) {
+    .skills {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        font-size: 50px;
+    }
+    
+}
