--- a/src/page/home/home.module.css
+++ b/src/page/home/home.module.css
@@ -50,6 +50,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin: 20px;
     }
 }
 @media (max-width:600px) {
