--- a/src/page/home/home.module.css
+++ b/src/page/home/home.module.css
@@ -59,8 +59,8 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-left: 100px;
-        margin-right: 100px;
+        margin: 20px;
+        padding:20px;
        
     }
 }
