--- a/src/components/skills/skills.module.css
+++ b/src/components/skills/skills.module.css
@@ -8,7 +8,7 @@
     
 }
 
-@media screen and (max-width: 600px) {
+@media(max-width: 600px) {
     .skills {
         display: flex;
         flex-direction: row;
