--- a/src/components/contacts/contacts.module.css
+++ b/src/components/contacts/contacts.module.css
@@ -11,7 +11,7 @@
     font-size: 50px;
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 600px) {
     .contacts {
         display: flex;
         align-items: center;
