--- a/src/page/home/home.module.css
+++ b/src/page/home/home.module.css
@@ -71,7 +71,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 20px;
+      
     }
 }
 
@@ -90,6 +90,15 @@
    .title{text-align: center;
     font-weight: bolder;
   } 
+}
+
+@media(max-width: 600px){
+    .container1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+       
+    }
 }
 
 .containerName {
