--- a/src/page/home/home.module.css
+++ b/src/page/home/home.module.css
@@ -74,6 +74,13 @@
     }
 }
 
+@media (max-width:600px) {
+    .containerContacts {
+        display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+}}
 
 @media (max-width:600px) {
     .containerName {
