--- a/src/components/skills/skills.module.css
+++ b/src/components/skills/skills.module.css
@@ -15,10 +15,10 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: center;
+        justify-content: space-around;
         padding-top: 50px;
         padding-bottom: 50px;
-        font-size: 50px;
+   
     }
     
 }
