--- a/src/components/skills/skills.module.css
+++ b/src/components/skills/skills.module.css
@@ -18,7 +18,7 @@
         justify-content: space-around;
         padding-top: 50px;
         padding-bottom: 50px;
-   
+   margin-right: 20px;
     }
     
 }
