--- a/src/page/home/home.module.css
+++ b/src/page/home/home.module.css
@@ -3,7 +3,7 @@
     justify-content: space-around;
     margin-top: 50px;
     margin-left: 20px ;
-    margin-right: 20px; ;
+    margin-right: 20px; 
    
 }
 
